--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
+    "react-reveal": "^1.2.2",
     "react-scroll-trigger": "^0.6.2",
     "react-scrollmagic": "^2.2.0",
     "react-sound": "^1.2.0",
     "scrollmagic": "^2.0.7"
   },
   "devDependencies": {
+    "gh-pages": "^3.0.0",
     "prettier": "2.0.5"
   },
   "keywords": [
