--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "gh-pages": "^3.0.0",
+    "html-webpack-plugin": "^4.3.0",
     "prettier": "2.0.5"
   },
   "keywords": [
