made mobile site persistent

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scroll-trigger": "^0.6.3",
     "react-scrollmagic": "^2.2.0",
     "react-sound": "^1.2.0",
+    "reactjs-localstorage": "^1.0.1",
     "scrollmagic": "^2.0.7"
   },
   "devDependencies": {
